--- a/main.css
+++ b/main.css
@@ -28,22 +28,21 @@ html,body {
     width: 100%;
     height: 100%;
 }
-img {width: 100%;} 
 .section-wrapper {
     display: grid;
     column-gap: var(--grid-gap);
     row-gap:  var(--grid-gap);
     grid-template-columns: 1fr 1fr;
-    width: 100%;
-    height: 100%;
     overflow-y: scroll;
     overflow-x: hidden;
+    width: 100%;
+    height: 100%;
     transform-style: preserve-3d;
     perspective: var(--perspective);
     perspective-origin: 50% 10%;
 }
 .item {
-    font-size: 2em;
+    font-size: 2vw;
     position: relative;
     margin:3vw;
     font-family: "Syne";
@@ -51,14 +50,26 @@ img {width: 100%;}
 
 }
 .item:hover .thumbnail {
-    transform: translateZ(0vw)translateX(10vw)translateY(1vw);
+    transform: translateZ(-1px)translateX(10vw)translateY(1vw);
 }
 .thumbnail {
     transition: all 2s;
     width: 20vw;
+    height: 20vw;
+    background-color: black;
+    vertical-align: middle;
     transform: translateZ(-10vw)translateX(10vw);
-    image-rendering: pixelated;
     transform-style: preserve-3d;
+}
+.thumbnail > img {
+    max-width: 100%;
+    max-height: 100%;
+    position: absolute;  
+    top: 0;  
+    bottom: 0;  
+    left: 0;  
+    right: 0;  
+    margin: auto;
 }
 .title {
     width: 90%;
@@ -71,7 +82,7 @@ img {width: 100%;}
     transform: rotateX(10deg) translateZ(-1vw);
     transform-style: preserve-3d;
 }
-a {
+.section-wrapper > a {
     text-decoration: none;
     color:black;
     transform-style: preserve-3d;
@@ -119,16 +130,26 @@ a {
     border: none;
     transform-style: preserve-3d;
 }
+footer {
+    position: sticky;
+    margin-top: -3vw;
+    text-align: center;
+    pointer-events: none;
+    font-family: "Syne";
+    font-size: 2vw;
+    color: black;
+}
 @media only screen and (max-width: 700px) { /* { fix making a 1 lane layout for mobile and small screens */
     
     .thumbnail {
         transform: translateZ(-15vw)translateX(26vw);
         width: 40vw;
+        height: 40vw;
         padding-top: 10vw;
         padding-bottom: 10vw;
     }
     .item:hover .thumbnail {
-        transform: translateZ(0vw)translateX(26vw);
+        transform: translateZ(-1px)translateX(26vw);
     }
     .section-wrapper{
         grid-template-columns: 100%;
@@ -139,5 +160,8 @@ a {
     }
     .logo-container > * {
         transform: translateZ(-10vw);
+    }
+    .item {
+        font-size: 4vw;
     }
 }
