update font + favicon

--- a/main.css
+++ b/main.css
@@ -13,12 +13,34 @@
     font-display: swap;
 }
 
-:root {
-    --grid-gap: 10px;
-    --perspective: 500px;
-    --logo-size: 20vw;
+@font-face {
+    font-family: 'Latitude';
+    src: url('fonts/Latitude-Regular.woff2');
+    src: url('fonts/Latitude-Regular.woff');
 }
-
+@font-face {
+    font-family: 'Abordage';
+    src: url('fonts/Abordage-Regular.woff2');
+    src: url('fonts/Abordage-Regular.woff');
+}
+@font-face {
+    font-family: 'Basalte';
+    src: url('fonts/Basalte-Multicolor.woff2');
+    src: url('fonts/Basalte-Multicolor.woff');
+}
+@font-face {
+    font-family: 'FT88';
+    src: url('fonts/FT88-School.woff2');
+    src: url('fonts/FT88-School.woff');
+}
+:root {
+    --perspective: 500px;
+    --logo-size: 15vw;
+    --title-background-color: rgba(255, 255, 255, 0.9);
+    --title-text-color: hsl(210,75%,50%);
+    --shelf-color: rgb(236, 236, 236);
+    --description-text-color: black;
+}
 *, *:before, *:after {
     margin: 0;
     padding: 0;
@@ -30,8 +52,8 @@ html,body {
 }
 .section-wrapper {
     display: grid;
-    column-gap: var(--grid-gap);
-    row-gap:  calc(10vw + var(--grid-gap));
+    column-gap: 0;
+    row-gap:  10vw;
     grid-template-columns: 1fr 1fr;
     overflow-y: scroll;
     overflow-x: hidden;
@@ -42,7 +64,6 @@ html,body {
     perspective-origin: 50% 10%;
 }
 .item {
-    font-size: 2vw;
     position: relative;
     margin:3vw;
     font-family: "Syne";
@@ -72,15 +93,27 @@ html,body {
     margin: auto;
 }
 .title {
+    font-family: "FT88";
     width: 90%;
+    padding: 1vw 0;
     margin-left: 5%;
     border-radius: 0%;
-    background-color:darkseagreen;
-    text-align:center;
+    background-color: var(--title-background-color);
+    text-align: center;
     transform-origin: 50% 100%;
     border: 1px solid black;
     transform: rotateX(10deg) translateZ(-1vw);
     transform-style: preserve-3d;
+}
+h2 {
+    color: var(--title-text-color);
+    animation: color-change 60s infinite;
+    font-size: 2vw;
+    font-weight: normal;
+}
+@keyframes color-change {
+    0% { filter: hue-rotate(0); }
+    100% { filter: hue-rotate(1turn);}
 }
 .section-wrapper > a {
     text-decoration: none;
@@ -89,11 +122,11 @@ html,body {
 }
 .description {
     background-color: white;
-    font-family: "Syne";
+    color:  var(--description-text-color);
     display: border-box;
-    font-size: 12px;
+    font-size: 1vw;
     margin: 1vw;
-    padding: 20px;
+    padding: 1vw;
     border: 1px solid black;
     transform-style: preserve-3d;
 }
@@ -104,7 +137,7 @@ html,body {
     bottom: 0;
     left: 0;
     height: 50%;
-    background: lavender;
+    background: var(--shelf-color);
     border: 1px solid black;
     transform-origin: 50% 100%;
     transform: rotateX(90deg);
@@ -161,7 +194,13 @@ footer {
     .logo-container > * {
         transform: translateZ(-10vw);
     }
-    .item {
+    h2 {
         font-size: 4vw;
+    }
+    .description {
+        font-size: 2vw;
+    }
+    .title{
+        padding: 2vw 0;
     }
 }
