--- a/main.css
+++ b/main.css
@@ -35,7 +35,6 @@
 }
 :root {
     --perspective: 500px;
-    --logo-size: 15vw;
     --title-background-color: rgba(255, 255, 255, 0.9);
     --title-text-color: hsl(210,75%,50%);
     --shelf-color: rgb(236, 236, 236);
@@ -83,13 +82,15 @@ html,body {
     transform-style: preserve-3d;
 }
 .thumbnail > img {
+    border: 1px solid black;
+    background-color: grey;
     max-width: 100%;
     max-height: 100%;
     position: absolute;
-    top: 0;  
-    bottom: 0;  
-    left: 0;  
-    right: 0;  
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     margin: auto;
 }
 .title {
@@ -140,7 +141,7 @@ h2 {
     background: var(--shelf-color);
     border: 1px solid black;
     transform-origin: 50% 100%;
-    transform: rotateX(90deg);
+    transform: rotateX(90deg)translateY(-1px);
     transform-style: preserve-3d;
 }
 .logo-container {
@@ -148,18 +149,24 @@ h2 {
     grid-column-start: 1;
     grid-column-end: 3;
     transform-style: preserve-3d;
+    vertical-align: middle;
+    text-align: center;
 }
 .logo-container > * {
+    display:inline-block;
+    padding: 0 5vw;
+    margin: 7vw 0;
     font-family: "pilowlava";
-    font-size: var(--logo-size);
+    font-size: 15vw;
     border: none;
     pointer-events: none;
-    transform: translateZ(-5vw);
+    transform: translateZ(-5vw)rotateZ(5deg)rotateY(-5deg);
     background: linear-gradient(90deg, rgba(179,18,237,0.5) 0%, rgba(202,242,9,0.5) 100%);
     transform-style: preserve-3d;
 }
 .logo-image {
-    width: var(--logo-size);
+    width: 15vw;
+    margin-bottom:-2vw;
     border: none;
     transform-style: preserve-3d;
 }
@@ -192,7 +199,7 @@ footer {
         grid-column-end: 2;
     }
     .logo-container > * {
-        transform: translateZ(-10vw);
+        transform: translateZ(-10vw)rotateZ(5deg)rotateY(-5deg);
     }
     h2 {
         font-size: 4vw;
