--- a/AiDJ/stylesheet.css
+++ b/AiDJ/stylesheet.css
@@ -7,8 +7,18 @@
 html,body {
     width: 100%;
     height: 100%;
+    overflow: hidden;
+    position: fixed;
+}
+
+html {
+    touch-action: manipulation;
 }
 
 input[type="file"] {
    background-color: royalblue;
+}
+input, textarea {
+    font-size: 16px;
+    -webkit-text-size-adjust: none;
 }
