--- a/AiDJ/prototype.css
+++ b/AiDJ/prototype.css
@@ -94,7 +94,7 @@ header {
 .addsong {
     display: block;
     position: absolute;
-    visibility: hidden;
+    /* visibility: hidden; */
     top:7vh;
     left: 5vw;
     text-align: center;
@@ -332,19 +332,14 @@ input[type=range]::-moz-range-thumb {
     background: red;
     cursor: pointer;
 }
-@keyframes fade-in {
+.hidden {
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s linear 0.5s, opacity 0.5s ease-in-out;
+}
 
-    0% {
-        opacity: 1;
-        visibility: visible;
-    }
-    99% {
-        opacity: 0;
-        visibility: visible;
-    }
-    100% {
-        opacity: 0;
-        visibility: hidden;
-    }
-
+.visible {
+    visibility: visible;
+    opacity: 1;
+    transition: visibility 0s linear, opacity 0.5s ease-in-out 0.5s;
 }
