--- a/AiDJ/prototype.css
+++ b/AiDJ/prototype.css
@@ -1,9 +1,18 @@
+@font-face {
+    font-family: 'Necto Mono';
+    src: url('NectoMono-Regular.woff2') format('woff2'),
+        url('NectoMono-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
 *, *:before, *:after {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     overflow: hidden;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Necto Mono';
 }
 html,body {
     width: 100%;
@@ -65,7 +74,7 @@ header {
 .header-div > button {
     width: 33vw;
     height: 5vh;
-    border-radius: 10px;
+    border-radius: 20px;
     color:white;
     text-decoration:none;
     background-color:#44c767;
@@ -101,7 +110,7 @@ header {
     background-color: rgb(58, 58, 58);
     width: 90vw;
     height: 80vh;
-    border-radius: 5vw;
+    border-radius: 20px;
 }
 
 .addsong-container {
@@ -125,7 +134,7 @@ header {
     height: 5vh;
     margin: 10px;
     background-color: #535353;
-    border-radius: 5vw;
+    border-radius: 20px;
 }
 
 .addsong-searchbar-container > input {
@@ -142,19 +151,17 @@ header {
     width: 100%;
     height: 100%;
     padding: 10px;
-    background-color: #1e1e1e;
     display: flex;
     justify-content: center;
     align-content: center;
     align-items: center;
     justify-items: center;
-    border-radius: 3vw;
+    border-radius: 20px;
 }
 
 .addsong-track-image-container > img {
-    width: 20vh;
-    height: 20vh;
-    border-radius: 1vw;
+    width: 22vw;
+    border-radius: 20px;
 }
 
 hr {
@@ -202,7 +209,22 @@ hr {
     align-items: center;
     justify-items: center;
     background-color: #393939;
-    border-radius: 1vw;
+    border-radius: 20px;
+}
+.spotify-checkbox-container {
+    display: flex;
+    align-content: center;
+    align-items: center;
+    justify-items: center;
+    justify-content: stretch;
+    border: 1px solid blue;
+    margin: 5px;
+    padding: 5px;
+    border-radius: 20px;
+    background-color: rgb(124, 122, 255);
+}
+.spotify-checkbox-container > label {
+    padding: 5px;
 }
 
 /* DECK CHOSE */
@@ -219,7 +241,7 @@ hr {
 .addsong-deckchose > * {
     width: 30%;
     height: 50%;
-    border-radius: 10px;
+    border-radius: 20px;
     border: none;
     background-color: #000000;
     font-size: 1em;
