--- a/main.css
+++ b/main.css
@@ -67,7 +67,7 @@ html,body {
     border: 1px solid black;
     background-color: grey;
     max-width: 100%;
-    max-height: 100%;
+ /* max-height: 100%; */
     position: absolute;
     top: 0;
     bottom: 0;
